--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nu-scraper",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "nu-scraper.js",
   "scripts": {},
   "author": "Noercholis <email@noercholis.com> (http://noercholis.com)",
@@ -8,7 +8,8 @@
   "dependencies": {
     "nu-widget": "",
     "cheerio":"",
-    "node-horseman":""
+    "node-horseman":"",
+    "express":""
   },
   "devDependencies": {},
   "repository": {
