--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nu-scraper",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "main": "nu-scraper.js",
   "scripts": {},
   "author": "Noercholis <email@noercholis.com> (http://noercholis.com)",
@@ -9,7 +9,7 @@
     "nu-widget": "",
     "cheerio":"",
     "node-horseman":"",
-    "express":""
+    "express":"",
   },
   "devDependencies": {},
   "repository": {
