--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "nu-widget": "",
     "cheerio":"",
-    "node-horseman":"",
+    "node-horseman":""
   },
   "devDependencies": {},
   "repository": {
